--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
+	<button id='reset' type='button'>reset</button>
 	<div id="board">
-		<div class="card initial">1</div>
-		<div class="card initial">2</div>
-		<div class="card initial">1</div>
-		<div class="card initial">2</div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>		
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
+		<div class="card initial"></div>
 	</div>
 		
 </body>
